# lifequest

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: main.yml
db/migrations/: 20250319_193632_add-tracking-and-xp-to-habits.surql
db/migrations/definitions/: 20250319_193632_add-tracking-and-xp-to-habits.json
public/models/: skybox.hdr
public/models/mobs/: chicken_balloon.glb  fox.glb  fox_rig.glb
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  db_commands.rs  lib.rs  main.rs
src-tauri/src/db_commands/: habit.rs  habit_log.rs  island.rs  mod.rs  schema.rs  seed.rs  user.rs
src/components/atoms/: Button.tsx  DarkModeToggle.tsx
src/components/atoms/ActionButton/: ActionButton.scss  ActionButton.tsx
src/components/atoms/Button/: Button.scss  Button.tsx
src/components/atoms/CircularProgress/: CircularProgress.scss  CircularProgress.tsx
src/components/atoms/DarkModeToggle/: DarkModeToggle.scss  DarkModeToggle.tsx
src/components/atoms/GoogleButton/: GoogleButton.scss  GoogleButton.tsx
src/components/atoms/Headline/: Headline.scss  Headline.tsx
src/components/molecules/Box/: Box.tsx  (+1 more)
src/components/organisms/: StatsTeaser.tsx
src/lib/: FloatingObject.tsx  FluentEmoji.tsx  HabitsContext.tsx  IslandContext.tsx  PopOverContext.tsx  ThemeContext.tsx  UserContext.tsx  XP.ts  getEmoji.tsx
src/pages/: Diary.tsx  HabitDetail.tsx  Habits.tsx  Home.tsx  Island.tsx  Login.tsx  Profile.tsx  Shop.tsx
src/styles/: App.scss  Typo.scss
(+71 files in other folders)
