[package]
name = "lifequest"
version = "0.1.0"
description = "A Tauri App"
authors = ["Sandra Scheipl", "Maximilian Roll"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "lifequest_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.44.2", features = ["full"] }
surrealdb = { version = "2.3.0", features = ["kv-rocksdb"] }
dotenv = "0.15.0"
winapi = { version = "0.3", features = ["winbase"] }
chrono = "0.4.41"

[profile.release]
lto = true
strip = true
opt-level = 'z'
panic = 'abort'
codegen-units = 1

